--- a/styles/global.css
+++ b/styles/global.css
@@ -20,3 +20,19 @@
 	display: flex;
 	text-align:center;
 }
+
+.FocusButton{
+	height:5vw;
+	width:5vw;
+	z-index: 1;
+	float: right;
+	font-size: 0.75vw;
+}
+
+/*focusButton: {
+		height: '5vh',
+		width: '5vw',
+		zIndex: '1',
+		float:'right',
+		fontSize:'0.75vw'
+	}*/
